HR education links updated

--- a/src/app/footer/footer.scss
+++ b/src/app/footer/footer.scss
@@ -1,8 +1,7 @@
 .footer {
     width: 100vw;
     max-width: 100%;
-    background: #284fa7;
-    ;
+     background-color: #1f396e;
     color: #fff;
 
     a {
