--- a/src/app/home-content/home.scss
+++ b/src/app/home-content/home.scss
@@ -7,7 +7,9 @@
 }
 .photo_section{
   padding: .5rem;
+  background-color: #f9f9f9;
 }
+
 .home_img {
   width: 100%;
   height: auto;
@@ -123,31 +125,10 @@ mat-grid-tile {
   flex: 1;
 }
 
-.about_section::before {
-  content: "";
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 60vh;
-  background-image: url('../../assets/carousel/university_image.jpg'); /* your image path */
-  background-size: cover;
-  background-position: center;
-  opacity: 0.3;
-  z-index: -1;
-}
-
-.about_section {
-  display: flex;
-  min-width: 100%;
-  height: 60vh;
-  position: relative;
-}
-
 .video-wrapper {
-  height: 100%;
+  height: 90%;
   overflow: hidden;
-  aspect-ratio: 16/ 9;
+  //aspect-ratio: 16/ 9;
 }
 .video-wrapper:before {
     background: linear-gradient(-55deg, rgba(51, 131, 250, 0) 20%, rgb(6, 52, 117) 100%);
@@ -156,11 +137,12 @@ mat-grid-tile {
     background: linear-gradient(-55deg, rgba(51, 131, 250, 0) 20%, rgb(6, 52, 117) 100%);
 }
 .video-wrapper video {
-  width: 100%;
+  width: 100.2%;
   height: 100%;
   object-fit:cover;
   /* or use 'contain' for full visibility */
   display: block;
+  margin-top: -4rem;
 }
 .logo_img_small{
   min-width: 15rem !important;
@@ -175,7 +157,100 @@ object-fit: cover;
 border-radius: 1rem;
 }
 .crcLogoImg{
-width: 12rem;
-height: 6rem;
+width: 8rem;
+height: 8rem;
 }
 
+.animate-image {
+  animation: slideUp 0.6s ease-out forwards;
+}
+
+.big-div {
+  height: 100%;
+  background: #f0f0f0;
+  opacity: 0;
+  transform: translateY(60px);
+  transition: all 0.6s ease-out;
+  margin-bottom: 40px;
+}
+
+.animate-slide {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+.congratsImg{
+  width:100%;
+  height: 30rem;
+  object-fit: contain;
+}
+
+/* distingwish professors */
+
+ .professorTable > div {max-width:100%;flex-shrink:1; background-color: #f9f9f9;;}
+
+ .dtperBox {width:100%;max-width:350px;position:relative;border-radius:10px;color:#fff;transition:all .4s ease;
+     background: linear-gradient(180deg, #134080 0%, #040D1A 100%);}
+ .dtperImgBox {
+  //margin-top:-50px;
+  overflow:hidden;}
+ .dtperImgBox img {transition:all .4s ease;top:0;opacity:1;position:relative;}
+ .dtperDetail {padding:10px 15px;position:relative;z-index:2;}
+ .dtperName {font-size:14px;font-weight:600;margin-bottom:0; letter-spacing: .7px;}
+ .dtperDesig {font-size:11px;text-transform:uppercase;}
+ .dtperContent {width:100%;height:100%;position:absolute;
+  //bottom:30px;
+  top:0;
+  left:0;font-size:15px;line-height:1.5;border-radius:10px;padding:0;opacity:0;transition:all .4s ease;z-index:1;}
+ .dtperContent p{ padding: .5rem;}
+  .dtperBox:hover .dtperContent {opacity:1;bottom:0}
+ .dtperBox:hover .dtperImgBox img {filter:grayscale(100%);opacity:.2;top:50px;}
+ @media (min-width:768px) {
+ .professorTable > div {max-width:50%;flex-shrink:1;}
+ }
+ @media (min-width:1024px) {
+ .professorTable > div {width:30%;max-width:33.33%;flex-shrink:1;}
+ }
+
+.profImgBox {max-width:450px;margin:0 auto;}
+.profImgBox .profImg {width:100%;height:100%;object-fit:contain;object-position:bottom;}
+
+.profContent p {font-size:16px;line-height:1.8;color: rgba(255, 255, 255, 0.7);}
+.profContent .profName {color:var(--yellowColor);font-size:24px;font-weight:600;line-height:1.5;}
+.profContent .designation {color:#fff;font-size:14px;line-height:1.5;}
+
+@media (min-width:640px) {
+.profImgBox {max-width:350px;margin:0 auto;}
+}
+@media (min-width:768px) {
+.profContBox {padding-top:0;}
+.professorSwiper:before {font-size:5vw;}
+.profImgBox {max-width:unset;}
+}
+@media (min-width:1024px) {
+.profContBox {padding-top:0px;}
+/* .professorSwiper:before {height:100px;} */
+}
+@media (min-width:1280px) {
+.profContent p {font-size:18px;}
+}
+@media (min-width:1536px) {
+.profContBox {padding-top:0px;}
+/* .professorSwiper:before {height:130px;} */
+}
+
+// logo section
+.crcLogoContainer{
+background-color: #f9f9f9;
+}
+
+// govt link section
+.govt-section{
+  .govt-img-container{
+    box-shadow: .3rem .3rem #f9f9f9;
+  }
+}
+.govt_img{
+  height: 7rem;
+  max-height: 7rem;
+}
